--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-scroll": "^1.8.7",
     "react-slick": "^0.29.0",
     "reactstrap": "^9.0.2",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.4.10",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
