--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.7",
+    "react-simple-image-slider": "^2.4.1",
     "react-slick": "^0.29.0",
     "reactstrap": "^9.0.2",
     "sweetalert": "^2.1.2",
